--- a/app/views/issues/show.html.erb
+++ b/app/views/issues/show.html.erb
@@ -65,7 +65,7 @@
       if User.current.allowed_to?(:view_time_entries, @project)
         if @issue.total_spent_hours > 0
           if User.current.allowed_to?(:view_internal_time, nil, {:global => true})
-            rows.right l(:label_spent_time), issue_spent_hours_details(@issue), :class => 'spent-time'
+            rows.right l(:field_hours), issue_spent_hours_details(@issue), :class => 'spent-time'
           end
           if  User.current.allowed_to?(:view_external_time, nil, {:global => true})
             rows.right l(:field_external_time), link_to(l_hours_short((@issue.time_entries.sum(:external_time) || 0.0)), issue_time_entries_path(@issue)) , :class => 'spent-time'
